--- a/package.json
+++ b/package.json
@@ -1,16 +1,363 @@
 {
-    "name": "codeceptjs-tests",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "test": "codeceptjs run --steps",
-        "test:docker": "docker run --net=host -v $PWD:/tests codeceptjs/codeceptjs"
-    },
-    "devDependencies": {
-        "@codeceptjs/configure": "^0.10.0",
-        "@codeceptjs/examples": "^1.2.1",
-        "@codeceptjs/ui": "^0.7.0",
-        "codeceptjs": "^3.5.8",
-        "playwright": "^1.40.1"
-    }
+  "name": "codeceptjs-tests",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "test": "codeceptjs run --steps",
+    "test:docker": "docker run --net=host -v $PWD:/tests codeceptjs/codeceptjs"
+  },
+  "devDependencies": {
+    "@codeceptjs/configure": "^0.10.0",
+    "@codeceptjs/examples": "^1.2.1",
+    "@codeceptjs/ui": "^0.7.0",
+    "codeceptjs": "^3.5.4",
+    "playwright": "^1.40.1"
+  },
+  "description": "Codeceptjs Test Automation",
+  "main": "codecept.conf.js",
+  "dependencies": {
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.8",
+    "acorn": "^8.10.0",
+    "after": "^0.8.2",
+    "ansi-colors": "^4.1.1",
+    "ansi-escapes": "^3.2.0",
+    "ansi-regex": "^4.1.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "argparse": "^2.0.1",
+    "array-flatten": "^1.1.1",
+    "arraybuffer.slice": "^0.0.7",
+    "arrify": "^2.0.1",
+    "assertion-error": "^1.1.0",
+    "asynckit": "^0.4.0",
+    "axios": "^0.24.0",
+    "backo2": "^1.0.2",
+    "balanced-match": "^1.0.2",
+    "base64-arraybuffer": "^0.1.4",
+    "base64-js": "^1.5.1",
+    "base64id": "^2.0.0",
+    "binary-extensions": "^2.2.0",
+    "bl": "^4.1.0",
+    "blob": "^0.0.5",
+    "bo-selector": "^0.0.10",
+    "body-parser": "^1.20.2",
+    "boolbase": "^1.0.0",
+    "boolean": "^3.2.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browser-stdout": "^1.3.1",
+    "buffer": "^5.7.1",
+    "buffer-crc32": "^0.2.13",
+    "buffer-from": "^1.1.2",
+    "bytes": "^3.1.2",
+    "cacheable-request": "^6.1.0",
+    "call-bind": "^1.0.5",
+    "camel-case": "^3.0.0",
+    "camelcase": "^6.3.0",
+    "chai": "^4.3.8",
+    "chai-deep-match": "^1.2.1",
+    "chai-exclude": "^2.1.0",
+    "chai-json-schema": "^1.5.1",
+    "chai-json-schema-ajv": "^5.2.4",
+    "chai-match-pattern": "^1.3.0",
+    "chai-string": "^1.5.0",
+    "chalk": "^4.1.2",
+    "chardet": "^0.7.0",
+    "check-error": "^1.0.3",
+    "checkit": "^0.7.0",
+    "cheerio": "^1.0.0-rc.12",
+    "cheerio-select": "^2.1.0",
+    "chokidar": "^3.5.3",
+    "class-transformer": "^0.5.1",
+    "clean-css": "^4.2.4",
+    "cli-cursor": "^2.1.0",
+    "cli-spinners": "^2.9.2",
+    "cli-width": "^2.2.1",
+    "cliui": "^7.0.4",
+    "clone": "^1.0.4",
+    "clone-response": "^1.0.3",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "combined-stream": "^1.0.8",
+    "commander": "^8.3.0",
+    "component-bind": "^1.0.0",
+    "component-emitter": "^1.3.1",
+    "component-inherit": "^0.0.3",
+    "concat-map": "^0.0.1",
+    "concat-stream": "^1.6.2",
+    "config-chain": "^1.1.13",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "core-js": "^2.6.12",
+    "core-util-is": "^1.0.3",
+    "cross-spawn": "^7.0.3",
+    "css-select": "^5.1.0",
+    "css-to-xpath": "^0.1.0",
+    "css-what": "^6.1.0",
+    "debug": "^4.3.4",
+    "decamelize": "^4.0.0",
+    "decompress-response": "^3.3.0",
+    "deep-eql": "^4.1.3",
+    "deep-keys": "^0.5.0",
+    "defaults": "^1.0.4",
+    "defer-to-connect": "^1.1.3",
+    "define-data-property": "^1.1.1",
+    "define-properties": "^1.2.1",
+    "delayed-stream": "^1.0.0",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "detect-node": "^2.1.0",
+    "diff": "^5.0.0",
+    "dom-serializer": "^2.0.0",
+    "domelementtype": "^2.3.0",
+    "domhandler": "^5.0.3",
+    "domutils": "^3.1.0",
+    "duplexer3": "^0.1.5",
+    "editorconfig": "^1.0.4",
+    "ee-first": "^1.1.1",
+    "electron": "^15.5.7",
+    "emoji-regex": "^8.0.0",
+    "encodeurl": "^1.0.2",
+    "end-of-stream": "^1.4.4",
+    "engine.io": "^6.5.4",
+    "engine.io-client": "^3.5.3",
+    "engine.io-parser": "^2.2.1",
+    "entities": "^4.5.0",
+    "env-paths": "^2.2.1",
+    "envinfo": "^7.8.1",
+    "err-code": "^1.1.2",
+    "es6-error": "^4.1.1",
+    "escalade": "^3.1.1",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^4.0.0",
+    "etag": "^1.8.1",
+    "express": "^4.18.2",
+    "external-editor": "^3.1.0",
+    "extract-zip": "^1.7.0",
+    "fast-deep-equal": "^2.0.1",
+    "fclone": "^1.0.11",
+    "fd-slicer": "^1.1.0",
+    "figures": "^3.2.0",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.2.0",
+    "find-up": "^5.0.0",
+    "flat": "^5.0.2",
+    "fn-args": "^4.0.0",
+    "follow-redirects": "^1.15.3",
+    "form-data": "^4.0.0",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "fs-extra": "^8.1.0",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "get-caller-file": "^2.0.5",
+    "get-func-name": "^2.0.2",
+    "get-intrinsic": "^1.2.2",
+    "get-stream": "^4.1.0",
+    "glob": "^6.0.1",
+    "glob-parent": "^5.1.2",
+    "global-agent": "^3.0.0",
+    "global-tunnel-ng": "^2.7.1",
+    "globalthis": "^1.0.3",
+    "gopd": "^1.0.1",
+    "got": "^9.6.0",
+    "graceful-fs": "^4.2.11",
+    "has-binary2": "^1.0.3",
+    "has-cors": "^1.1.0",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.1",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "hasown": "^2.0.0",
+    "he": "^1.2.0",
+    "html-minifier": "^4.0.0",
+    "htmlparser2": "^8.0.2",
+    "http-cache-semantics": "^4.1.1",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "ieee754": "^1.2.1",
+    "indexof": "^0.0.1",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.8",
+    "inquirer": "^6.5.2",
+    "ipaddr.js": "^1.9.1",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-glob": "^4.0.3",
+    "is-interactive": "^1.0.0",
+    "is-number": "^7.0.0",
+    "is-plain-obj": "^2.1.0",
+    "is-unicode-supported": "^0.1.0",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "joi": "^17.11.0",
+    "js-beautify": "^1.14.9",
+    "js-yaml": "^4.1.0",
+    "json-buffer": "^3.0.0",
+    "json-stringify-safe": "^5.0.1",
+    "jsonfile": "^4.0.0",
+    "jsonpointer.js": "^0.4.0",
+    "keyv": "^3.1.0",
+    "locate-path": "^6.0.0",
+    "lodash": "^4.17.21",
+    "lodash-checkit": "^2.4.1",
+    "lodash-match-pattern": "^2.3.1",
+    "lodash-pickdeep": "^1.0.2",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.merge": "^4.6.2",
+    "lodash.mergewith": "^4.6.2",
+    "log-symbols": "^4.1.0",
+    "loupe": "^2.3.7",
+    "lower-case": "^1.1.4",
+    "lowercase-keys": "^1.0.1",
+    "lru-cache": "^6.0.0",
+    "matcher": "^3.0.0",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-fn": "^1.2.0",
+    "mimic-response": "^1.0.1",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "mkdirp": "^1.0.4",
+    "ms": "^2.1.3",
+    "mute-stream": "^0.0.7",
+    "nanoid": "^3.3.7",
+    "negotiator": "^0.6.3",
+    "no-case": "^2.3.2",
+    "nopt": "^6.0.0",
+    "normalize-path": "^3.0.0",
+    "normalize-url": "^4.5.1",
+    "npm-conf": "^1.1.3",
+    "nth-check": "^2.1.1",
+    "object-inspect": "^1.13.1",
+    "object-keys": "^1.1.1",
+    "on-finished": "^2.4.1",
+    "once": "^1.4.0",
+    "onetime": "^2.0.1",
+    "openai": "^4.20.1",
+    "ora-classic": "^5.4.2",
+    "os-tmpdir": "^1.0.2",
+    "p-cancelable": "^1.1.0",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "param-case": "^2.1.1",
+    "parse-function": "^5.6.4",
+    "parse5": "^7.1.2",
+    "parse5-htmlparser2-tree-adapter": "^7.0.0",
+    "parseqs": "^0.0.6",
+    "parseuri": "^0.0.6",
+    "parseurl": "^1.3.3",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-to-regexp": "^0.1.7",
+    "pathval": "^1.1.1",
+    "pend": "^1.2.0",
+    "picomatch": "^2.3.1",
+    "pify": "^3.0.0",
+    "playwright-core": "^1.40.1",
+    "prepend-http": "^2.0.0",
+    "process-nextick-args": "^2.0.1",
+    "progress": "^2.0.3",
+    "promise-retry": "^1.1.1",
+    "proto-list": "^1.2.4",
+    "proxy-addr": "^2.0.7",
+    "proxy-from-env": "^1.1.0",
+    "pump": "^3.0.0",
+    "qs": "^6.11.0",
+    "randombytes": "^2.1.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.2",
+    "readable-stream": "^2.3.8",
+    "readdirp": "^3.6.0",
+    "reflect-metadata": "^0.1.13",
+    "regexp-match-indices": "^1.0.2",
+    "regexp-tree": "^0.1.27",
+    "relateurl": "^0.2.7",
+    "require-directory": "^2.1.1",
+    "responselike": "^1.0.2",
+    "resq": "^1.10.2",
+    "restore-cursor": "^2.0.0",
+    "retry": "^0.10.1",
+    "roarr": "^2.15.4",
+    "run-async": "^2.4.1",
+    "rxjs": "^6.6.7",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "semver": "^6.3.1",
+    "semver-compare": "^1.0.0",
+    "send": "^0.18.0",
+    "serialize-error": "^7.0.1",
+    "serialize-javascript": "^6.0.0",
+    "serve-static": "^1.15.0",
+    "set-function-length": "^1.1.1",
+    "setprototypeof": "^1.2.0",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.0.4",
+    "signal-exit": "^3.0.7",
+    "socket.io": "^4.7.2",
+    "socket.io-adapter": "^1.1.2",
+    "socket.io-client": "^2.5.0",
+    "socket.io-parser": "^4.2.4",
+    "source-map": "^0.6.1",
+    "sprintf-js": "^1.1.1",
+    "statuses": "^2.0.1",
+    "string_decoder": "^1.1.1",
+    "string-width": "^2.1.1",
+    "strip-ansi": "^5.2.0",
+    "strip-json-comments": "^3.1.1",
+    "sumchecker": "^3.0.1",
+    "supports-color": "^7.2.0",
+    "through": "^2.3.8",
+    "tmp": "^0.0.33",
+    "to-array": "^0.1.4",
+    "to-readable-stream": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "tslib": "^1.14.1",
+    "tunnel": "^0.0.6",
+    "tv4": "^1.3.0",
+    "type-detect": "^4.0.8",
+    "type-fest": "^0.13.1",
+    "type-is": "^1.6.18",
+    "typedarray": "^0.0.6",
+    "uglify-js": "^3.17.4",
+    "universalify": "^0.1.2",
+    "unpipe": "^1.0.0",
+    "upper-case": "^1.1.3",
+    "url-parse-lax": "^3.0.0",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "uuid": "^9.0.1",
+    "vary": "^1.1.2",
+    "wcwidth": "^1.0.1",
+    "which": "^2.0.2",
+    "workerpool": "^6.2.1",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "ws": "^7.4.6",
+    "xmlhttprequest-ssl": "^1.6.3",
+    "xpath-builder": "^0.0.7",
+    "y18n": "^5.0.8",
+    "yallist": "^4.0.0",
+    "yargs": "^16.2.0",
+    "yargs-parser": "^20.2.4",
+    "yargs-unparser": "^2.0.0",
+    "yauzl": "^2.10.0",
+    "yeast": "^0.1.2",
+    "yocto-queue": "^0.1.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
